fix bugs for double clickable tiles, make grid 4x4 tiles, add more images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="app.js"></script>
 </head>
 <body>
-
-    <h3>Score:<span id="result"></span></h3>
+    <h1>Memory --- Let's Play!</h1>
+    <h3>Matches found: <span id="result"></span></h3>
+    <h4>Count: <span id="attempts"></span></h4>
 
     <div class="grid"></div>
     
