--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <h4>Count: <span id="attempts"></span></h4>
 
     <div class="grid"></div>
+    <br>
+    <footer>
+        <a href="https://www.youtube.com/watch?app=desktop&v=lhNdUVh3qCc&t=1657s" target="_blank" title="Video Tutorial">Inspired by Ania Kubow</a>
+    </footer>
     
 </body>
 </html>
